# caseinterview-arham-zakki-edelo

./: .gitignore  Dockerfile  README.md  config.alloy  docker-compose.yml  otel.sh  run_app.sh  run_test.sh  setup.cfg
.devcontainer/: postCreateCommand.sh
pyramid_app_caseinterview/: __init__.py  routes.py  telemetry.py
pyramid_app_caseinterview/filters/: __init__.py  depthseries.py  services.py  timeseries.py
pyramid_app_caseinterview/models/: __init__.py
pyramid_app_caseinterview/scripts/: fake_data.py  generate_fake_data.py  ingest_data_depthseries.py
pyramid_app_caseinterview/utils/: __init__.py  file_writers.py
pyramid_app_caseinterview/views/: api.py
tests/: conftest.py  test_api_timeseries.py  test_functional.py  testing.ini
