[metadata]
name = pyramid-app-caseinterview
summary = A pyramid app for case interview
author = Datalab
author-email = datalab@vanoord.com
keywords = web wsgi bfg pylons pyramid
license = none
home-page = https://caseinterview.data.vanoord.com/
description-file = README.md
classifier = 
	"Programming Language :: Python",
	"Framework :: Pyramid",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: WSGI :: Application",

[options.entry_points]
paste.app_factory = 
	main = pyramid_app_caseinterview:main
console_scripts = 
	pyramid_app_caseinterview_initialize_db = pyramid_app_caseinterview.scripts.initializedb:main

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
install_requires = alembic
	docopt
	gunicorn
	pyramid
	sqlalchemy==2.*
	transaction
	mako
	pypugjs
	psycopg2-binary
	pyramid_debugtoolbar
	pyramid_mako
	pyramid_tm
	types-setuptools
	waitress
	zope.sqlalchemy
	    pytest-randomly
setup_requires = setuptools_scm

[options.extras_require]
testing = 
	coverage-badge
	faker
	flake8-bugbear
	flake8-isort
	flake8<5
	mypy
	pyramid_debugtoolbar
	pytest
	pytest-black
	pytest-cov
	pytest-flake8
	pytest-isort
	pytest-logging
	pytest-mypy
	pytest-split
	Sphinx
	WebTest

[files]
packages = 
	pyramid_app_caseinterview

[extras]

[mypy]
ignore_missing_imports = True

[mypy-pyramid_app_caseinterview]
allow_untyped_defs = True

[tool:isort]
known_first_party = pyramid_app*,sqlalchemy_eventsourcing
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[tool:pytest]
addopts = 
	--verbose
	-W default
testpaths = tests
filterwarnings = 
	error
	ignore::UserWarning

[flake8]
max_line_length = 150
extend_ignore = E203, W503, W601
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
autodoc_tree_index_modules = True

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

